feat: change the button display style

--- a/index.html
+++ b/index.html
@@ -2,69 +2,11 @@
 <html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
-    <title>文大資傳課程清單-依照領域分類</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-      header {
-        text-align: center;
-        font-size: 28px;
-        padding: 20px;
-        background-color: #f0f0f0;
-      }
-      .info {
-        width: 90%;
-        margin: 20px auto;
-        font-size: 16px;
-        line-height: 1.5;
-        background-color: #fafafa;
-        border: 1px solid #ccc;
-        padding: 10px;
-      }
-      .info a {
-        color: blue;
-        text-decoration: underline;
-      }
-      .button-container {
-        text-align: center;
-        margin-top: 20px;
-        margin-bottom: 20px;
-      }
-      .button-container button {
-        margin: 5px;
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
-      }
-      .content {
-        width: 90%;
-        margin: 0 auto 20px;
-      }
-      table {
-        border-collapse: collapse;
-        width: 100%;
-        margin-top: 10px;
-      }
-      table,
-      th,
-      td {
-        border: 1px solid #333;
-      }
-      th,
-      td {
-        padding: 8px;
-        text-align: left;
-      }
-      h2 {
-        margin-top: 0;
-      }
-    </style>
+    <title>文大資傳課程-依專業領域分類</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>文大資傳課程清單-依照領域分類</header>
+    <header>文大資傳課程-依專業領域分類</header>
 
     <!-- 說明區域 -->
     <div class="info">
@@ -76,10 +18,11 @@
       </p>
       <p>
         如有任何使用上的問題，或者版權疑慮請
-        <a href="mailto:kkyleko@outlook.com">寄送電子郵件聯絡開發者</a>。
+        <a href="mailto:developer@example.com">寄送電子郵件聯絡開發者</a>。
       </p>
     </div>
 
+    <!-- 按鈕區 -->
     <div id="buttonContainer" class="button-container">
       <!-- 按鈕將由 JSON 資料動態產生 -->
     </div>
