--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>文大資傳課程-依專業領域分類</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -22,9 +23,9 @@
       </p>
     </div>
 
-    <!-- 按鈕區：按鈕會根據 JSON 資料中的 title 動態產生 -->
+    <!-- 按鈕區：按鈕將依 JSON 資料中的 title 動態生成 -->
     <div id="buttonContainer" class="button-container">
-      <!-- 按鈕將由 JavaScript 動態產生 -->
+      <!-- 按鈕由 JavaScript 產生 -->
     </div>
 
     <!-- 表格顯示區 -->
