--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </p>
       <p>
         如有任何使用上的問題，或者版權疑慮請
-        <a href="mailto:developer@example.com">寄送電子郵件聯絡開發者</a>。
+        <a href="mailto:kkyleko@outlook.com">寄送電子郵件聯絡開發者</a>。
       </p>
     </div>
 
